# ocr-pdf-reader

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
config/: settings.py
docs/: ARCHITECTURE.md
examples/: example.py
src/ocr_pdf_reader/: __init__.py  __main__.py  cli.py  core.py  image_processor.py  text_processor.py
tests/: __init__.py  test_line_breaking.py  test_real_format.py  test_remove_ending.py  test_text_processor.py
