[project]
name = "ocr-pdf-reader"
version = "1.0.0"
description = "Extração de texto de PDFs com imagens usando OCR"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Arthur"},
]
license = {text = "MIT"}
keywords = ["ocr", "pdf", "text-extraction", "image-processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pymupdf>=1.26.0",
    "pytesseract>=0.3.13",
]

[project.scripts]
ocr-pdf-reader = "ocr_pdf_reader.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/ocr-pdf-reader"
Repository = "https://github.com/your-username/ocr-pdf-reader"
Issues = "https://github.com/your-username/ocr-pdf-reader/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_pdf_reader"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
